[project]
name = "trmnl-hmdoay"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Loes",email = "aaron.loes@loesoft.com"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [{include = "trmnl_hmdoay"}]
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
